# ncof_generated

./: ETRI_두두원_수식화_간결버전.md  ETRI_두두원_리아푸노프_적용계획.md  README.md  callback_server.py  test_server.py
gym_for_ncof/: .gitignore  README.md  pyproject.toml
gym_for_ncof/docs/: NCOF_gNB2_energy_model_plan.pptx  progress.md
gym_for_ncof/models/: gnb2_policy.json
gym_for_ncof/scripts/: evaluate.py  sweep_wq.py  train.py
gym_for_ncof/src/gym_for_ncof/: __init__.py  env.py  policy_export.py  traffic.py
prototype/callback-server/: README.md  docker-compose.yaml  log_config.ini  openapi.yaml  pyproject.toml  run.sh  run_http2.sh
prototype/callback-server/.openapi-generator/: FILES
prototype/callback-server/src/nncof_cb/: main.py
prototype/callback-server/src/nncof_cb/apis/: ncof_events_subscription_notification_callback_receiver_api.py  ncof_events_subscription_notification_callback_receiver_api_base.py
prototype/callback-server/src/nncof_cb/impl/: ncof_callback_impl.py  utils.py
prototype/callback-server/src/nncof_cb/models/: access_type.py  accuracy_info.py  cell_power_param_sets_per_ts.py  eutra_location.py  gad_shape.py  geo_distribution_info.py  geographical_coordinates.py  gera_location.py  global_ran_node_id.py  invalid_param.py  ipv6_addr.py  ipv6_prefix.py  local2d_point_uncertainty_ellipse.py  local3d_point_uncertainty_ellipsoid.py  location_area_id.py  ncgi.py  nncof_events_subscription_notification.py  nr_location.py  plmn_id.py  point_altitude.py  (+15 more)
prototype/callback-server/tests/: conftest.py
prototype/nncof-server/: .env.example  AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml  log_config.ini  nrf_dummy_nfs.json  openapi.yaml  pyproject.toml  run.bat  run.sh  run_http2.sh
prototype/nncof-server/.omc/: project-memory.json
prototype/nncof-server/.omc/sessions/: f7cca878-94a1-4671-bbff-c7aa7ccf0a80.json
prototype/nncof-server/.openapi-generator/: FILES
prototype/nncof-server/src/nncof/: main.py  security_api.py  test.py
prototype/nncof-server/tests/: test_individual_ncof_event_subscription_transfer_document_api.py  test_individual_ncof_events_subscription_document_api.py
prototype/nnef-server/: README.md  docker-compose.yaml  log_config.ini  main.py  openapi.yaml  pyproject.toml  run.sh  run_af.sh  run_http2.sh  run_ricf.sh
prototype/nnef-server/.omc/: project-memory.json
prototype/nnef-server/.openapi-generator/: FILES
prototype/nnef-server/src/nnef/: main.py  security_api.py
prototype/nnef-server/tests/: conftest.py  test_individual_subscription_document_api.py
prototype/nupf-server/: AGENTS.md  README.md  main.py  openapi.yaml  pyproject.toml  run.sh  run_http2.sh
prototype/nupf-server/.omc/: project-memory.json
prototype/nupf-server/.openapi-generator/: FILES
prototype/nupf-server/doc/: request.json
prototype/nupf-server/src/nupf/: main.py  security_api.py
prototype/nupf-server/tests/: conftest.py  test_default_api.py  test_subscriptions_collection_api.py
(+848 files in other folders)
