[project]
name = "callback-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "nupf-server",
    "rich>=15.0.0",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nncof_cb"]

[tool.uv.sources]
nupf-server = { workspace = true }
